--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
     .secondSection .box-container{
         display: flex;
         justify-content: space-between;
+        
     }
     .box-one h1 a{
         list-style: none;
@@ -128,4 +129,33 @@
     .box-three h1 a:hover{
         color: plum;
         font-size: 2.02rem;
+    }
+
+
+
+    .footer{
+      background: rgb(4, 4, 125);
+    }
+    .footer .footer-container{
+      justify-content: space-between;
+      display: grid;
+    }
+    .footer .footer-container .box .share a{
+      height: 4rem;
+      width: 4rem;
+      color: #fff;
+      text-align: center;
+    }
+    .footer .footer-container .box .share a:hover{
+      color: plum;
+        font-size: 2.02rem;
+    }
+    .footer  .box-four{
+      display: flex;
+      justify-content: space-around;
+      
+   
+
+
+
     }
