added media query on about.css

--- a/about.css
+++ b/about.css
@@ -107,3 +107,52 @@ button:hover{
     margin: 10px 0;
   }
 }
+
+
+
+
+/* Media query for screens up to 475px */
+@media (max-width: 475px) {
+  .firstSection {
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+
+  .rightSection h1,
+  .rightSection h3,
+  .rightSection p,
+  .leftSection img,
+  button {
+    margin: 0;
+    text-align: center;
+  }
+
+  .rightSection h1 {
+    font-size: 60px;
+    margin-top: 0;
+    margin-left: 0; /* Reset the margin for smaller screens */
+  }
+
+  .rightSection h3 {
+    font-size: 18px;
+    margin-top: -6vh;
+    margin-left: 0; /* Reset the margin for smaller screens */
+  }
+
+  .rightSection p {
+    font-size: 16px;
+    margin-left: 0; /* Reset the margin for smaller screens */
+  }
+
+  .leftSection img {
+    width: 100%;
+    height: auto;
+    margin-top: 0;
+  }
+
+  button {
+    margin: 10px 0;
+    margin-left: 0; /* Reset the margin for smaller screens */
+  }
+}
