--- a/contact.css
+++ b/contact.css
@@ -88,3 +88,49 @@ button:hover{
     color: rgb(32, 5, 79);
         font-size: 2.02rem;
 }
+
+
+
+
+/* media query */
+@media (max-width: 300px) {
+    .background {
+      width: 100%;
+      height: auto;
+    }
+  
+    .background .shape {
+      width: 100px;
+      height: 100px;
+    }
+  
+    form {
+      width: 90%;
+      padding: 20px;
+    }
+  
+    form h3 {
+      font-size: 24px;
+    }
+  
+    label {
+      font-size: 14px;
+      margin-top: 20px;
+    }
+  
+    input {
+      height: 40px;
+      font-size: 12px;
+    }
+  
+    button {
+      margin-top: 30px;
+      padding: 10px 0;
+      font-size: 16px;
+    }
+  
+    button:hover {
+      font-size: 1.6rem;
+    }
+  }
+  
